[gd_scene load_steps=6 format=3 uid="uid://bmqfxmkrh82mi"]

[ext_resource type="Script" path="res://src/Scenes/Editors/Char/Char-Editor.gd" id="1"]
[ext_resource type="Script" path="res://src/Scenes/Editors/Char/Camera.gd" id="2_6i50t"]
[ext_resource type="FontFile" uid="uid://bl1fltam42vw3" path="res://src/Fonts/pixel.otf" id="2_e3vst"]
[ext_resource type="Script" path="res://src/Scenes/Editors/Char/Char.gd" id="2_ordas"]
[ext_resource type="Script" path="res://src/Scenes/Editors/Char/HUD.gd" id="2_vhxn2"]

[node name="Char-Editor" type="Node2D"]
script = ExtResource("1")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(640, 360)
ignore_rotation = false
zoom = Vector2(0.5, 0.5)
script = ExtResource("2_6i50t")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 128
script = ExtResource("2_vhxn2")

[node name="ColorRect" type="ColorRect" parent="HUD"]
offset_left = 854.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 424.0
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="CharName" type="TextEdit" parent="HUD"]
offset_left = 1034.0
offset_top = 55.0
offset_right = 1267.0
offset_bottom = 91.0
text = "boyfriend"

[node name="Mods" type="OptionButton" parent="HUD"]
offset_left = 857.0
offset_top = 11.0
offset_right = 1267.0
offset_bottom = 52.0

[node name="Load" type="Button" parent="HUD"]
offset_left = 857.0
offset_top = 56.0
offset_right = 944.0
offset_bottom = 90.0
text = "Load"

[node name="Save" type="Button" parent="HUD"]
offset_left = 947.0
offset_top = 56.0
offset_right = 1031.0
offset_bottom = 90.0
text = "Save"

[node name="Loop" type="CheckBox" parent="HUD"]
offset_left = 1127.0
offset_top = 127.0
offset_right = 1194.0
offset_bottom = 158.0
text = "Loop"

[node name="winning_icon" type="CheckBox" parent="HUD"]
offset_left = 861.0
offset_top = 200.0
offset_right = 928.0
offset_bottom = 231.0
text = "Has Winning Icon (3 icons)"

[node name="AA" type="CheckBox" parent="HUD"]
offset_left = 1114.0
offset_top = 161.0
offset_right = 1214.0
offset_bottom = 192.0
text = "Pixelated"

[node name="FPS" type="SpinBox" parent="HUD"]
offset_left = 900.0
offset_top = 126.0
offset_right = 983.063
offset_bottom = 157.0
min_value = 1.0
value = 24.0

[node name="Label" type="Label" parent="HUD"]
offset_left = 861.0
offset_top = 130.0
offset_right = 893.0
offset_bottom = 156.0
text = "FPS:"

[node name="Scale" type="SpinBox" parent="HUD"]
offset_left = 1045.0
offset_top = 126.0
offset_right = 1128.06
offset_bottom = 157.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="Label2" type="Label" parent="HUD"]
offset_left = 991.0
offset_top = 130.0
offset_right = 1036.0
offset_bottom = 156.0
text = "Scale:"

[node name="CameraX" type="SpinBox" parent="HUD"]
offset_left = 937.0
offset_top = 160.0
offset_right = 1020.06
offset_bottom = 191.0
min_value = -1000.0
max_value = 1000.0

[node name="CameraY" type="SpinBox" parent="HUD"]
offset_left = 1025.0
offset_top = 160.0
offset_right = 1108.06
offset_bottom = 191.0
min_value = -1000.0
max_value = 1000.0

[node name="Label3" type="Label" parent="HUD"]
offset_left = 861.0
offset_top = 164.0
offset_right = 937.0
offset_bottom = 190.0
text = "Cam Pos:"

[node name="Animations" type="OptionButton" parent="HUD"]
offset_left = 857.0
offset_top = 94.0
offset_right = 1031.0
offset_bottom = 123.0
icon_alignment = 1

[node name="CharAnimations" type="OptionButton" parent="HUD"]
offset_left = 1034.0
offset_top = 94.0
offset_right = 1268.0
offset_bottom = 123.0
icon_alignment = 1

[node name="Status" type="Label" parent="HUD"]
offset_left = 854.0
offset_top = 424.0
offset_right = 1272.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("2_e3vst")
theme_override_font_sizes/font_size = 8
text = "x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBarColor" type="ColorPicker" parent="HUD"]
offset_left = 857.0
offset_top = 235.0
offset_right = 1065.0
offset_bottom = 415.0
edit_alpha = false
picker_shape = 4
can_add_swatches = false
color_modes_visible = false
presets_visible = false

[node name="IconBack" type="ColorRect" parent="HUD"]
offset_left = 1078.0
offset_top = 238.0
offset_right = 1258.0
offset_bottom = 418.0
color = Color(0.290196, 0.415686, 0.231373, 1)

[node name="Icon" type="Sprite2D" parent="HUD"]
position = Vector2(1168, 326)
region_enabled = true
region_rect = Rect2(0, 0, 132, 132)

[node name="Line2D" type="Line2D" parent="."]
z_index = 5
position = Vector2(640, 360)
points = PackedVector2Array(-20, 0, 20, 0, 0, 0, 0, -20, 0, 20)
width = 2.0

[node name="Char" type="Marker2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("2_ordas")

[node name="Image" type="Sprite2D" parent="Char"]
centered = false
offset = Vector2(10, 10)
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="Lines" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="Z" type="Line2D" parent="Lines"]
z_index = -1
points = PackedVector2Array(-2000, -100, 2000, 100)
width = 4.0
default_color = Color(0, 0, 1, 1)

[node name="X" type="Line2D" parent="Lines"]
z_index = -1
points = PackedVector2Array(-2000, 0, 2000, 0)
width = 4.0
default_color = Color(1, 0, 0, 1)

[node name="Y" type="Line2D" parent="Lines"]
z_index = -1
points = PackedVector2Array(0, -2000, 0, 2000)
width = 4.0
default_color = Color(0, 1, 0, 1)

[connection signal="item_selected" from="HUD/Mods" to="." method="_on_mods_item_selected"]
[connection signal="pressed" from="HUD/Load" to="HUD" method="_on_Load_pressed"]
[connection signal="pressed" from="HUD/Save" to="HUD" method="_on_save_pressed"]
[connection signal="pressed" from="HUD/winning_icon" to="." method="_on_winning_icon_pressed"]
[connection signal="item_selected" from="HUD/Animations" to="HUD" method="_on_animations_item_selected"]
[connection signal="item_selected" from="HUD/CharAnimations" to="." method="_on_CharAnimations_item_selected"]
